--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   setup:
     name: Setup the release
+    runs-on: ubuntu-latest
     steps:
     - name: Version bump
       run: |
@@ -39,6 +40,7 @@ jobs:
   prep-wheels:
     name: Prepare wheels for upload
     needs: [linux-x86, linux-aarch, macos-arm, macos-x86]
+    runs-on: ubuntu-latest
 
     steps:
     - name: Download wheels
