try empty job to fix unknown job

--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -22,15 +22,15 @@ jobs:
     needs: [setup]
     uses: ./.github/workflows/build-wheel-linux-x86_64.yaml
 
-  # linux-aarch:
-  #   name: Build on Linux aarch64
-  #   needs: [setup]
-  #   uses: ./.github/workflows/build-wheel-linux-arm64.yaml
+  linux-aarch:
+    name: Build on Linux aarch64
+    needs: [setup]
+    # uses: ./.github/workflows/build-wheel-linux-arm64.yaml
 
-  # macos-arm:
-  #   name: Build on macOS arm64
-  #   needs: [setup]
-  #   uses: ./.github/workflows/build-wheel-macos-arm64.yaml
+  macos-arm:
+    name: Build on macOS arm64
+    needs: [setup]
+    # uses: ./.github/workflows/build-wheel-macos-arm64.yaml
 
   macos-x86:
     name: Build on macOS x86-64
