--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -26,11 +26,17 @@ jobs:
     name: Build on Linux aarch64
     needs: [setup]
     # uses: ./.github/workflows/build-wheel-linux-arm64.yaml
+    runs-on: ubuntu-latest
+    steps:
+    - runs: echo "hello"
 
   macos-arm:
     name: Build on macOS arm64
     needs: [setup]
     # uses: ./.github/workflows/build-wheel-macos-arm64.yaml
+    runs-on: ubuntu-latest
+    steps:
+    - runs: echo "hello"
 
   macos-x86:
     name: Build on macOS x86-64
