--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -16,6 +16,11 @@ jobs:
     - name: Version bump
       run: |
         python $GITHUB_WORKSPACE/.github/workflows/set_nightly_version.py
+
+    - name: Push new version
+      run: |
+        git config --global user.email "catalyst_bot@xanadu.ai"
+        git config --global user.name "Version Bump Bot"
         git add $GITHUB_WORKSPACE/frontend/catalyst/_version.py
         git commit -m "bump nightly version"
         git push
