use pat for push

--- a/.github/workflows/nightly-release.yaml
+++ b/.github/workflows/nightly-release.yaml
@@ -12,6 +12,7 @@ jobs:
     steps:
     - name: Checkout Catalyst repo
       uses: actions/checkout@v4
+      token: ${{ secrets.BOT_PAT }}
 
     - name: Version bump
       run: |
