--- a/.github/workflows/build-wheel-macos-x86_64.yaml
+++ b/.github/workflows/build-wheel-macos-x86_64.yaml
@@ -8,7 +8,7 @@ env:
   MACOSX_DEPLOYMENT_TARGET: 12
 
 concurrency:
-  group: 'Build Catalyst Wheel on macOS (x86_64)'-${{ github.ref }}
+  group: Build Catalyst Wheel on macOS (x86_64)-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
