attempt fix for missing artifacts

--- a/.github/workflows/build-wheel-linux-x86_64.yaml
+++ b/.github/workflows/build-wheel-linux-x86_64.yaml
@@ -67,6 +67,7 @@ jobs:
       run: |
         mkdir wheel
         touch wheel/PennyLane_Catalyst-0.8.0.dev0-cp${{ matrix.python_version }}-cp${{ matrix.python_version }}-linux_x86_64.whl
+        echo "hello" >> wheel/PennyLane_Catalyst-0.8.0.dev0-cp${{ matrix.python_version }}-cp${{ matrix.python_version }}-linux_x86_64.whl
 
     - name: Upload Wheel Artifact
       uses: actions/upload-artifact@v3
